# test-deploy-wasm

./: .gitignore  Cargo.toml  Makefile.toml  README.md  main.py  requirements.txt
benchmark/: Cargo.toml
benchmark/src/: lib.rs  mandelbrot.rs  n_body.rs
pyo3/: Cargo.toml  pyproject.toml
pyo3/benchmark_pyo3/: __init__.py
pyo3/src/: lib.rs
wasm/: Cargo.toml  pyproject.toml
wasm/.cargo/: config
wasm/benchmark_wasm/: __init__.py
wasm/src/: lib.rs
