[package]
name = "benchmark_wasm"
version = "0.1.0"
authors = ["tkat0 <tkato.dev@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchmark = { path = "../benchmark" }

[lib]
crate-type = ['cdylib']