[tool.poetry]
name = "benchmark_wasm"
version = "0.1.0"
description = ""
authors = ["tkat0 <tkato.dev@gmail.com>"]
include = ["benchmark_wasm/*.wasm"]

[tool.poetry.dependencies]
python = "^3.8"
wasmtime = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"